   when ignoring tags like <br>.


2008-07-03  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/utils.c:
   Fix unnecessary 40 character limit for auto-closing XML tags
   (closes #2007278).
 * src/keyfile.c:
   Fix broken session file support with more than 99 files
   (closes #2007288).
 * src/symbols.c:
   Load "ignore_tags" file before generating global tags file.


2008-07-02  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/keybindings.c:
   Fix behaviour of Home and End keys in non-editor widgets when they
   are set as keybindings for Go to Line Start/End.
   This uses a new ignore_keybinding variable because changing
   KeyCallback to return gboolean would break plugin keybindings.
 * src/plugindata.h, src/plugins.c:
   Add document_close() to the plugin API.


2008-07-01  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/treeviews.c, src/callbacks.c, src/document.c, src/document.h:
   Add function document_close().


2008-06-30  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * waf, wscript:
   Update waf to its latest SVN rev which makes it 20 KB smaller.
   Update waf script to reflect waf API changes.
 * src/filetypes.c, src/filetypes.h, src/highlighting.c,
   src/templates.c:
   In templates_free_templates() destroy also file template menu items.
   Add reload argument to filetypes_load_config() to allow re-reading
   of the settings.
 * src/editor.c, src/editor.h, src/keyfile.c, src/keyfile.h, src/main.c:
   Move code to read snippets configuration to editor.c.
   Split editor_snippets_free() from editor_finalize().
 * src/interface.c, src/callbacks.c, src/callbacks.h, geany.glade:
   Add Tools menu item to reload configuration data (at the moment:
   templates, filetype extensions/configs and snippets).


2008-06-30  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/ui_utils.c:
   Use a dynamic pointer array for document sensitive widgets, so it's